# ether

./: .copier-answers.yml  .envrc  .gitignore  .pre-commit-config.yaml  Justfile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: settings.yml
.github/workflows/: checks.yaml  release.yaml
docs/: index.md
ether/: __init__.py  cli.py  config.py  db.py  link_graph.py  main.py  markdown_io.py  paths.py  project.py  templates.py
ether/ai/: __init__.py  backends.py  prompt_builder.py  style_manifest.py
ether/sequencer/: __init__.py  models.py  redaction.py
ether/static/css/: app.css
ether/stories/: __init__.py  frontmatter.py  index_models.py  indexer.py  redaction.py  repository.py  scanner.py  schema.py
ether/templates/: base.html
ether/templates/browse/: category.html  index.html  item.html
ether/templates/create/: index.html  panel.html  section.html
ether/templates/fiche/: edit.html
ether/templates/partials/: _related.html
ether/templates/redaction/: index.html  prompt.txt.j2
ether/templates/sequencer/: acte.html  chapitre.html  index.html  tome.html
ether/templates/stories/: acte.html  acte_edit.html  arc_detail.html  arc_edit.html  arcs.html  chapitre.html  chapitre_edit.html  index.html  redact.html  redaction_prompt.txt.j2  saga.html  saga_edit.html  tome.html  tome_edit.html
ether/templates/style/: edit.html  index.html
ether/templates/tags/: index.html  tag.html
ether/univers/: __init__.py  frontmatter.py  index_models.py  indexer.py  linkrewrite.py  repository.py  scanner.py  schema.py
ether/web/: __init__.py
ether/web/routers/: __init__.py  browse.py  create.py  fiche_edit.py  redaction.py  sequencer.py  stories.py  style.py  tags.py
tests/: conftest.py  test_ai_backends.py  test_browse_routes.py  test_config.py  test_create_routes.py  test_fiche_edit_routes.py  test_frontmatter_roundtrip.py  test_indexer_links.py  test_link_graph.py  test_linkrewrite.py  test_packaging_attribute.py  test_project_validation.py  test_redaction_flow.py  test_scanner.py  test_sequencer_routes.py  test_stories_indexer.py  test_stories_redaction.py  test_stories_routes.py  test_stories_scanner.py  test_style_manifest.py  test_tags_routes.py
tests/fixtures/project_min/stories/: _index.md
tests/fixtures/project_min/stories/one-shot-test/: _index.md  _manifest.md
tests/fixtures/project_min/stories/one-shot-test/act-1/: _index.md
tests/fixtures/project_min/stories/one-shot-test/act-1/_chapter/: chapitre-1.md
tests/fixtures/project_min/stories/saga-test/: _manifest.md
tests/fixtures/project_min/stories/saga-test/arcs/: arc-1.md
tests/fixtures/project_min/stories/saga-test/tome-1/: _index.md
tests/fixtures/project_min/stories/saga-test/tome-1/act-1/: _index.md
tests/fixtures/project_min/stories/saga-test/tome-1/act-1/_chapter/: chapitre-1.md
tests/fixtures/project_min/univers/lieux/: _index.md  citadel.md
tests/fixtures/project_min/univers/personnages/: sidekick.md
tests/fixtures/univers_min/lieux/: _template.md
tests/fixtures/univers_min/personnages/: _index.md  _template.md  hero.md
