[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ether"
version = "0.0.0"
description = "A tool to manage world building and story writting"
authors = [{name = "cdubos-fr", email = "contact@cdubos.fr"}]
readme = "README.md"
requires-python = ">= 3.14"
classifiers = [
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.2",
    "filelock>=3.16.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "ruamel.yaml>=0.18.6",
    "sqlmodel>=0.0.39",
    "typer>=0.27.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    { include-group = "dx" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "typing" },
    { include-group = "tests" },
    { include-group = "security" },
]
docs = [
    "zensical>=0.0.43",
]
dx = [
    "prek>=0.4.0",
    "commitizen>=4.16.2",
    "tox>=4.54.0",
    "tox-uv",
    "rust-just>=1.51.0"
]
lint = [
    "ruff>=0.15.13",
    "ssort>=0.16.0",
    "zizmor >=1.25.2",
]
security = [
    "bandit>=1.9.4",
]
typing = [
    "mypy>=2.1.0",
    "types-setuptools",
    "ty>=0.0.37",
]
tests = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.scripts]
ether = "ether.cli:app"

[tool.flit.module]
name = "ether"

[tool.pytest.ini_options]
addopts = [
    "--cov=ether",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--disable-pytest-warnings",
]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ether.*"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_reexport = true

[tool.ty.terminal]
error-on-warning = true

[tool.ruff]
fix = true
line-length = 100
preview = true
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Warning
    "W",
    # Mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-annotations
    "ANN",
    # bandit
    "S",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-future-annotations
    "FA",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # tryceratops
    "TRY",
]
lint.ignore = [
    "ANN101",
    "D203",
    "D212",
    "D213",
    "COM812",
]
lint.per-file-ignores."tests/**.py" = [
    "D",
    "S101",
]
lint.per-file-ignores."ether/sequencer/models.py" = [
    # `from __future__ import annotations` breaks SQLAlchemy relationship
    # resolution here under Python 3.14 — see the module's docstring.
    "FA100",
    "FA102",
]
lint.isort.force-single-line = true
format.quote-style = "single"
format.docstring-code-format = true
format.preview = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
    "ether/__init__.py",
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
